<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.benutritious.MainActivity">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/name_text_view"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/name_str"
            android:layout_marginBottom="16dp"
            />

        <EditText
            android:id="@+id/age_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/age_str"
            android:inputType="number"
            android:layout_marginBottom="16dp"/>

        <RadioGroup
            android:id="@+id/gender_rad_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <RadioButton
                android:id ="@+id/male_rad_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="10dp"
                android:text="@string/male_str"
                android:layout_weight="1"
                android:onClick="viMale"
                />

            <RadioButton
                android:id ="@+id/female_rad_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_str"
                android:layout_weight="2"
                android:onClick="vifemale"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/pregnant_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregnant_str"
            android:layout_marginBottom="16dp"
            android:textSize="24sp"/>

        <RadioGroup
            android:id="@+id/preg_rad_grp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <RadioButton
                android:id ="@+id/preg_yes_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="10dp"
                android:text="@string/yes"
                android:layout_weight="1"
                android:onClick="onPregnant_check"/>

            <RadioButton
                android:id ="@+id/preg_no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_weight="1"
                android:onClick="onPregnant_check"/>
        </RadioGroup>
        <Spinner
            android:id = "@+id/lifestyle_drop_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode = "dropdown"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/next_button_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Next"
            android:onClick="onProceedSecond"
            />
    </LinearLayout>
</RelativeLayout>
